data/derived/comb/progs/unify/prog6861.ml.out
Characters 38-39:
  let f a x = [a]::[0] in
                    ^
Error: This expression has type int but an expression was expected of type
         'a list
